fix cutoff for ownership transfer text

--- a/client/src/components/DataFiles/DataFilesProjectMembers/DataFilesProjectMembers.module.scss
+++ b/client/src/components/DataFiles/DataFilesProjectMembers/DataFilesProjectMembers.module.scss
@@ -55,12 +55,12 @@
   /* owner */
   th:nth-child(1),
   td:nth-child(1) {
-    width: 60%;
+    width: 50%;
   }
   /* confirmation */
   th:nth-child(2),
   td:nth-child(2) {
-    width: 40%;
+    width: 50%;
   }
 }
 
